[gd_scene load_steps=9 format=2]

[ext_resource path="res://User/User.tscn" type="PackedScene" id=1]
[ext_resource path="res://Photo/BackGround.png" type="Texture" id=2]
[ext_resource path="res://Photo/PixselPrint.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Thorn/Thorn.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/WorldGameCode.gd" type="Script" id=5]
[ext_resource path="res://Deer/Deer.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BackGround/Info:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.6, 0.6 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 3 )

[node name="World" type="Node2D"]
position = Vector2( 160, 120 )
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="BodyMap" type="StaticBody2D" parent="."]

[node name="Collision" type="CollisionPolygon2D" parent="BodyMap"]
visible = false
polygon = PoolVector2Array( -160, -128, -160, 120, 160, 120, 160, -119, -152, -120, -152, -128, 168, -128, 168, 128, -168, 128, -168, -128 )

[node name="BackGround" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="BackGround"]
margin_left = -800.0
margin_top = -600.0
margin_right = 800.0
margin_bottom = 600.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 800, 600 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "You dead = 0"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InfoTime" type="Label" parent="BackGround/Info"]
margin_left = 80.0
margin_top = 65.0001
margin_right = 1413.0
margin_bottom = 1211.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 800, 600 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Time = 300"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="User" parent="." instance=ExtResource( 1 )]
collision_layer = 19
collision_mask = 19

[node name="Thorn" parent="." instance=ExtResource( 4 )]
position = Vector2( 117, 115 )

[node name="ThornClone2" parent="Thorn" instance=ExtResource( 4 )]
position = Vector2( -14, 0 )

[node name="ThornClone3" parent="Thorn" instance=ExtResource( 4 )]
position = Vector2( -28, 0 )

[node name="ThornClone6" parent="Thorn" instance=ExtResource( 4 )]
position = Vector2( -231, 0 )

[node name="ThornClone5" parent="Thorn" instance=ExtResource( 4 )]
position = Vector2( -217, 0 )

[node name="ThornClone4" parent="Thorn" instance=ExtResource( 4 )]
position = Vector2( -203, 0 )

[node name="Deer" parent="." instance=ExtResource( 6 )]
position = Vector2( 69, 114 )
collision_layer = 16
collision_mask = 16

[node name="Camera" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 2, 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
